<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:padding="10dp"
    tools:context=".PlayActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginTop="25dp"
        app:cardCornerRadius="10dp"
        app:cardBackgroundColor="@color/material_on_primary_emphasis_high_type"
        app:cardElevation="15dp"
        >

        <TextView
            android:id="@+id/maintext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="29dp"
            android:fontFamily="cursive"
            android:gravity="center_vertical|center_horizontal"
            android:textColor="#000000"
            android:textSize="35sp"
            android:textStyle="bold"
            android:text="@string/unscramble_the_word"/>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_below="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginTop="50dp"
        app:cardCornerRadius="10dp"
        app:cardBackgroundColor="@color/material_on_primary_emphasis_high_type"
        app:cardElevation="15dp"
        >

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnGenWord"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="46.5dp"
            android:layout_marginEnd="25dp"
            android:layout_marginTop="25dp"
            android:layout_centerHorizontal="true"
            android:paddingBottom="10dp"
            android:text="@string/generate_scrambled_word" />

        <TextView
            android:id="@+id/timer"
            android:layout_below="@+id/btnGenWord"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="100dp"
            android:fontFamily="cursive"
            android:gravity="center_vertical|center_horizontal"
            android:textColor="#000000"
            android:textSize="35sp"
            android:textStyle="bold"
            android:text=""/>

        <TextView
            android:id="@+id/scrambledword"
            android:layout_below="@+id/timer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="160dp"
            android:gravity="center_vertical|center_horizontal"
            android:textColor="#000000"
            android:textSize="35sp"
            android:textStyle="bold"
            android:text=""/>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView3"
        android:layout_below="@+id/cardView2"
        android:layout_width="match_parent"
        android:layout_height="210dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginTop="50dp"
        app:cardCornerRadius="10dp"
        app:cardBackgroundColor="@color/material_on_primary_emphasis_high_type"
        app:cardElevation="15dp"
        >

        <com.google.android.material.textfield.TextInputLayout

            android:id="@+id/answerlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/scrambledword"
            android:layout_marginTop="20dp"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:hint="@string/what_is_the_word">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/answer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnAnswerCheck"
            android:layout_below="@+id/answerlayout"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="90dp"
            android:layout_marginStart="46.5dp"
            android:layout_centerHorizontal="true"
            android:paddingBottom="10dp"
            android:text="@string/check_your_answer" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnExit"
            android:layout_below="@+id/btnAnswerCheck"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="145dp"
            android:layout_marginStart="46.5dp"
            android:layout_centerHorizontal="true"
            android:paddingBottom="10dp"
            android:text="@string/quit_game" />

    </androidx.cardview.widget.CardView>

</RelativeLayout>