<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:background="@drawable/bg"
    tools:context=".MainMenuActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginTop="25dp"
        app:cardCornerRadius="10dp"
        app:cardBackgroundColor="@color/material_on_primary_emphasis_high_type"
        app:cardElevation="15dp"
        >

    <TextView
        android:id="@+id/maintext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="29dp"
        android:fontFamily="cursive"
        android:gravity="center_vertical|center_horizontal"
        android:textColor="#000000"
        android:textSize="35sp"
        android:textStyle="bold"
        android:text="@string/unscramble_the_words"/>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_below="@+id/cardView"
        android:layout_marginStart="25dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="25dp"
        app:cardBackgroundColor="@color/material_on_primary_emphasis_high_type"
        app:cardCornerRadius="15dp"
        app:cardElevation="15dp">

        <TextView
            android:id="@+id/subtext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="45dp"
            android:fontFamily="cursive"
            android:gravity="center"
            android:text="@string/_7_letter_words_appear_scrambled_nunscramble_the_words_within_35_seconds_each"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/subtext2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/subtext"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="195dp"
            android:fontFamily="cursive"
            android:gravity="center"
            android:text=""
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold">

        </TextView>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView3"
        android:layout_below="@+id/cardView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="25dp"
        app:cardCornerRadius="10dp"
        app:cardBackgroundColor="@color/material_on_primary_emphasis_high_type"
        app:cardElevation="15dp"
        >

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnPlay"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginEnd="45dp"
        android:layout_marginTop="25dp"
        android:layout_centerHorizontal="true"
        android:paddingBottom="10dp"
        android:text="@string/play_the_game" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnExit"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btnPlay"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="45dp"
            android:layout_marginTop="90dp"
            android:paddingBottom="10dp"
            android:text="@string/sign_out" />

    </androidx.cardview.widget.CardView>

</RelativeLayout>