<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:padding="10dp"
    tools:context=".MainActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginTop="25dp"
        app:cardCornerRadius="10dp"
        app:cardBackgroundColor="@color/material_on_primary_emphasis_high_type"
        app:cardElevation="15dp"
        >

        <TextView
            android:id="@+id/maintext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="29dp"
            android:fontFamily="cursive"
            android:gravity="center_vertical|center_horizontal"
            android:text="Verify your account"

            android:textColor="#000000"
            android:textSize="35sp"
            android:textStyle="bold" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_below="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginTop="265dp"
        android:layout_marginBottom="25dp"
        app:cardCornerRadius="15dp"
        app:cardElevation="15dp"
        app:cardBackgroundColor="@color/material_on_primary_emphasis_high_type"
        >

        <com.google.android.material.textfield.TextInputLayout

            android:id="@+id/emaillayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:layout_marginTop="25dp"
            android:hint="@string/enter_otp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/otp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLines="1" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnGenerateOTP"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btnRegister"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="125dp"
            android:layout_marginStart="46.5dp"
            android:paddingBottom="10dp"
            android:text="@string/generate_otp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnVerify"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btnRegister"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="200dp"
            android:layout_marginStart="46.5dp"
            android:paddingBottom="10dp"
            android:text="@string/verify" />

    </androidx.cardview.widget.CardView>

</RelativeLayout>